# dimos-lcm

./: .gitignore  README.md  __init__.py  flake.nix  generate.sh  lcm-gen  lcm_foxglove_bridge.py  pyproject.toml  regenerate_python.sh
cpp_lcm_msgs/actionlib_msgs/: GoalStatus.hpp  GoalStatusArray.hpp
cpp_lcm_msgs/diagnostic_msgs/: DiagnosticArray.hpp
cpp_lcm_msgs/foxglove_msgs/: CircleAnnotation.hpp  CubePrimitive.hpp  CylinderPrimitive.hpp  FrameTransform.hpp  Grid.hpp  LocationFix.hpp  ModelPrimitive.hpp  PointsAnnotation.hpp  RawAudio.hpp  RawImage.hpp  SceneEntityDeletion.hpp  SceneUpdate.hpp  TextPrimitive.hpp
cpp_lcm_msgs/geometry_msgs/: Accel.hpp  AccelStamped.hpp  InertiaStamped.hpp  PointStamped.hpp  Polygon.hpp  Pose.hpp  PoseWithCovarianceStamped.hpp  Transform.hpp  Twist.hpp  TwistStamped.hpp  Vector3Stamped.hpp
cpp_lcm_msgs/nav_msgs/: MapMetaData.hpp  Odometry.hpp  Path.hpp
cpp_lcm_msgs/sensor_msgs/: CameraInfo.hpp  FluidPressure.hpp  Illuminance.hpp  MagneticField.hpp  MultiEchoLaserScan.hpp
cpp_lcm_msgs/shape_msgs/: Mesh.hpp
cpp_lcm_msgs/std_msgs/: ByteMultiArray.hpp  Float32MultiArray.hpp  Float64MultiArray.hpp  Header.hpp  Int16MultiArray.hpp  Int32MultiArray.hpp  Int64MultiArray.hpp  Int8MultiArray.hpp  MultiArrayLayout.hpp  UInt16MultiArray.hpp  UInt8MultiArray.hpp
cpp_lcm_msgs/tf2_msgs/: TFMessage.hpp
cpp_lcm_msgs/trajectory_msgs/: JointTrajectory.hpp  JointTrajectoryPoint.hpp  MultiDOFJointTrajectoryPoint.hpp
cpp_lcm_msgs/visualization_msgs/: ImageMarker.hpp  InteractiveMarker.hpp  InteractiveMarkerControl.hpp  MarkerArray.hpp
cs_lcm_msgs/std_msgs/: String.cs
debugging_scripts/: lcm_image_save_test.py  lcm_publish_test.py  lcm_receive_test.py
foxglove_bridge/: __init__.py  bridge.py  config.py  message_converter.py  message_processor.py
java_lcm_msgs/diagnostic_msgs/: DiagnosticStatus.java  KeyValue.java
java_lcm_msgs/foxglove_msgs/: ArrowPrimitive.java  CameraCalibration.java  CubePrimitive.java  CylinderPrimitive.java  FrameTransform.java  Grid.java  ImageAnnotations.java  Log.java  ModelPrimitive.java  PackedElementField.java  Point2.java  PointCloud.java  PointsAnnotation.java  PosesInFrame.java  RawAudio.java  RawImage.java  SceneEntity.java  SpherePrimitive.java  TextAnnotation.java  TriangleListPrimitive.java
java_lcm_msgs/geometry_msgs/: Accel.java  AccelWithCovariance.java  Inertia.java  InertiaStamped.java  Point.java  Point32.java  Polygon.java  Pose.java  PoseWithCovarianceStamped.java  Quaternion.java  Transform.java  Vector3.java  Wrench.java
java_lcm_msgs/nav_msgs/: GridCells.java  MapMetaData.java  Path.java
java_lcm_msgs/sensor_msgs/: BatteryState.java  CompressedImage.java  FluidPressure.java  Illuminance.java  JointState.java  JoyFeedbackArray.java  LaserScan.java  MagneticField.java  MultiEchoLaserScan.java  NavSatFix.java  NavSatStatus.java  PointCloud.java  PointCloud2.java  PointField.java  Range.java  RegionOfInterest.java  TimeReference.java
java_lcm_msgs/shape_msgs/: Mesh.java  SolidPrimitive.java
java_lcm_msgs/std_msgs/: Bool.java  Byte.java  ByteMultiArray.java  Duration.java  Empty.java  Float32.java  Float32MultiArray.java  Float64.java  Float64MultiArray.java  Int16MultiArray.java  Int32.java  Int64MultiArray.java  Int8MultiArray.java  UInt16MultiArray.java  UInt32MultiArray.java  UInt64.java  UInt8.java
java_lcm_msgs/tf2_msgs/: TF2Error.java  TFMessage.java
java_lcm_msgs/trajectory_msgs/: JointTrajectory.java  JointTrajectoryPoint.java  MultiDOFJointTrajectory.java
java_lcm_msgs/visualization_msgs/: ImageMarker.java  InteractiveMarkerControl.java  InteractiveMarkerFeedback.java  InteractiveMarkerPose.java  Marker.java  MarkerArray.java
python_lcm_msgs/: fix_imports.py
python_lcm_msgs/lcm_msgs/actionlib_msgs/: GoalID.py  GoalStatus.py  GoalStatusArray.py
python_lcm_msgs/lcm_msgs/builtin_interfaces/: Duration.py  Time.py
python_lcm_msgs/lcm_msgs/diagnostic_msgs/: DiagnosticArray.py  DiagnosticStatus.py  KeyValue.py  __init__.py
python_lcm_msgs/lcm_msgs/foxglove_msgs/: ArrowPrimitive.py  CameraCalibration.py  CircleAnnotation.py  Color.py  CompressedImage.py  CompressedVideo.py  CubePrimitive.py  CylinderPrimitive.py  FrameTransform.py  FrameTransforms.py  GeoJSON.py  Grid.py  ImageAnnotations.py  KeyValuePair.py  LaserScan.py  LinePrimitive.py  LocationFix.py  Log.py  ModelPrimitive.py  PackedElementField.py  Point2.py  PointCloud.py  PointsAnnotation.py  PoseInFrame.py  PosesInFrame.py  RawAudio.py  RawImage.py  SceneEntity.py  SceneEntityDeletion.py  SceneUpdate.py  SpherePrimitive.py  TextAnnotation.py  TextPrimitive.py  TriangleListPrimitive.py  Vector2.py  __init__.py
python_lcm_msgs/lcm_msgs/geometry_msgs/: Accel.py  AccelStamped.py  AccelWithCovariance.py  AccelWithCovarianceStamped.py  Inertia.py  InertiaStamped.py  Point.py  Point32.py  PointStamped.py  Polygon.py  PolygonStamped.py  Pose.py  Pose2D.py  PoseArray.py  PoseStamped.py  PoseWithCovariance.py  PoseWithCovarianceStamped.py  Quaternion.py  QuaternionStamped.py  Transform.py  TransformStamped.py  Twist.py  TwistStamped.py  TwistWithCovariance.py  TwistWithCovarianceStamped.py  Vector3.py  Vector3Stamped.py  Wrench.py  WrenchStamped.py  __init__.py
python_lcm_msgs/lcm_msgs/nav_msgs/: GridCells.py  MapMetaData.py  OccupancyGrid.py  Odometry.py  Path.py  __init__.py
python_lcm_msgs/lcm_msgs/sensor_msgs/: BatteryState.py  CameraInfo.py  ChannelFloat32.py  CompressedImage.py  FluidPressure.py  Illuminance.py  Image.py  Imu.py  JointState.py  Joy.py  JoyFeedback.py  (+17 more)
sources/: lcm_to_generated.sh  ros_to_lcm.py
tf_lcm/: CMakeLists.txt  README.md  patch_lcm_messages.sh  test_transforms.cpp
tf_lcm/include/tf_lcm/: buffer.hpp  lcm_hash_compat.hpp
tf_lcm/python/: build.py  pyproject.toml  setup.py  test_bindings.py  tf_lcm_pybind.cpp
tf_lcm/python/examples/: minimal_robot_link_test.py
tf_lcm/python/tf_lcm_py.egg-info/: PKG-INFO  SOURCES.txt
tf_lcm/src/: buffer.cpp
tf_lcm/test/: robot_link_lookup_test.cpp
tools/: generate_python.sh
tools/foxglove_bridge/: config.py
tools/ts/: deno.json  msgs
(+104 files in other folders)
