[build-system]
requires = ["setuptools>=42.0", "wheel", "cmake>=3.10", "ninja", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dimos-tf"
version = "0.1.0"
description = "Transform library for Dimensional OS using LCM (requires system LCM: apt install liblcm-dev)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dimensional Team", email = "build@dimensionalOS.com"}
]
dependencies = [
    "numpy>=1.16.0",
    "lcm>=1.5.0",
    "dimos-lcm",  # For the LCM message definitions
]

[project.urls]
"Homepage" = "https://github.com/dimensionalai/tf_lcm"
"Bug Tracker" = "https://github.com/dimensionalai/tf_lcm/issues"

[tool.setuptools]
packages = ["dimos_tf", "dimos_tf.tf"]
package-dir = {"dimos_tf": ".", "dimos_tf.tf": "tf_lcm_py"}
package-data = {"dimos_tf.tf": ["*.so", "*.pyd", "_tf_lcm_py*.so", "_tf_lcm_py*.pyd", "*.py"]}
include-package-data = true

# Use a direct build mode
[tool.setuptools.cmdclass]
build_ext = "setuptools.command.build_ext.build_ext"

